# locawise

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
resources/test/: config.yaml
src/locawise/: __main__.py  envutils.py  errors.py  llm.py
src/locawise/localization/: config.py
src/threepio/: __main__.py  dictutils.py  diffutils.py  envutils.py  errors.py  llm.py  localization.py  localization_formats.py  localization_prompts.py  lockfile.py  main.py  parsing.py  processor.py  serialization.py
src/threepio/localization/: __init__.py  config.py  format.py  localization.py  localize.py  prompts.py
tests/: parsing_fixtures.py  test_androidutils_integration.py  test_dictutils.py  test_diffutils.py  test_envutils.py  test_envutils_integration.py  test_langutils.py  test_localization.py  test_localization_config_integration.py  test_localization_format.py  test_localization_formats.py  test_lockfile.py  test_lockfile_integration.py  test_main_integration.py  test_parsing.py  test_processor_integration.py  test_serialization.py  test_serialization_integration.py  utils.py
tests/localization/: test_localization.py  test_localization_config_integration.py  test_localization_format.py  test_serialization.py
tests/resources/: default_with_colon.properties  special_characters.properties
tests/resources/androidxml/: invalid.xml  mixed.xml  mixed_with_cdata.xml  only_plurals.xml  only_string_arrays.xml  only_strings.xml  strings_with_cdata.xml
tests/resources/languages/: tr.properties
tests/resources/localizationconfigs/: invalid.yaml  (+3 more)
(+2 files in other folders)
