[project]
name = "threepio"
version = "0.1.0"
description = ""
authors = [
    {name = "Emre Safak",email = "aemresafak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "threepio", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
